--- a/content/git.tex
+++ b/content/git.tex
@@ -122,7 +122,7 @@
     \item<2-> \textcolor{vertexDarkRed}{Branch}: A named pointer to a commit
       \begin{itemize}
         \item Development branches
-        \item Default branch: \texttt{master} or \texttt{main}
+        \item Default branch: usually \texttt{main} or \texttt{master}
         \item Moves to the next child if a commit is added
       \end{itemize}
     \item<4-> \textcolor{green!60!black}{Tag}: Fixed, named pointer to a commit
