Add hint about config file location

--- a/content/git.tex
+++ b/content/git.tex
@@ -141,6 +141,7 @@
       \end{code}
     \item This information is required as it will be added to each commit you make
     \item Hosting providers map commits to users by the commit email
+    \item \mintinline{bash}+git config --global+ modifies the users' global git config file in \mintinline{bash}+$HOME/.gitconfig+
   \end{itemize}
 \end{frame}
 
