--- a/content/git.tex
+++ b/content/git.tex
@@ -446,7 +446,7 @@
 \begin{frame}[c, fragile]{Default branch name}
 
   \begin{itemize}
-    \item Recently, a political correctness discussion happened around  master/slave terminology in tech
+    \item Some time ago, a political correctness discussion started around master/slave terminology in tech
     \item Many software projects have since replaced those terms
     \item While not directly related to master/slave, git also enabled to change the name of the default branch
     \item GitHub and GitLab now use \texttt{main} as default for new repositories
