Mention github cli

--- a/content/hosters.tex
+++ b/content/hosters.tex
@@ -68,7 +68,7 @@
       \begin{itemize}
         \item Works for cloning of public repositories out of the box
         \item As of 2021, Github requires a generated \emph{token}, not your password, for CLI login
-        \item Use git credential helper to have to enter credentials every time:\\
+        \item Use GitHub's CLI tool or the git credential helper to have to enter credentials every time:\\
           {\small\url{https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage}}
       \end{itemize}
     \item[SSH]
