Update example url

--- a/content/hosters.tex
+++ b/content/hosters.tex
@@ -97,7 +97,7 @@
     \item Add the public key to your profile
     \item Use the ssh URL for cloning. To change the URL of an already cloned repository, do
       \begin{code}{bash}
-        $ git remote set-url origin git@github.com:escape2020/school2022
+        $ git remote set-url origin git@github.com:s3-school/s3-2026-lectures
       \end{code}
   \end{enumerate}
 \end{frame}
