--- a/content/hosters.tex
+++ b/content/hosters.tex
@@ -187,7 +187,7 @@
     \item When starting the new branch, make sure to start from the up-to-date upstream main/master:
       \begin{code}{bash}
         $ git fetch upstream
-        $ git switch -c new_branch upstream/master
+        $ git switch -c new_branch upstream/main
       \end{code}
     \item Make changes and commit
     \item When pushing the branch, specify your fork (origin):
