--- a/content/advanced.tex
+++ b/content/advanced.tex
@@ -18,13 +18,13 @@
     \item To find the specific commit a bug was introduced or something changed
     \item Uses a binary search by marking commits as good/bad or old/new
     \item Can be done automatically by writing a small program that returns 1 for bad, 0 for good and 125 for \enquote{not sure}
-    \item Example using astropy, investigating \href{https://github.com/astropy/astropy/issues/12196}{astropy/astropy\#12196}
+    \item Example using astropy, investigating \href{https://github.com/astropy/astropy/issues/18866}{astropy/astropy\#18866}
     \begin{code}{text}
       # start bisecting
       git bisect start
       # first checkout and
-      git bisect bad v4.3
-      git bisect good v4.2
+      git bisect bad v7.2.0rc1
+      git bisect good v7.1.1
       # do tests and either mark commit as good or bad
       git bisect [good|bad]
     \end{code}
