--- a/content/advanced.tex
+++ b/content/advanced.tex
@@ -45,9 +45,9 @@
       \end{itemize}
     \item Not-yet-pushed commits can be freely modified
     \item Feature branches can usually be modified
-    \item Most large projects will even ask you to cleanup the history of your Pull Request to have a \enquote{nice} history
+    \item Maintainers of many large projects will even ask you to cleanup the history of your Pull Request
     \item Modifying already-pushed commits requires pushing with the \mintinline{bash}+--force+ option
-    \item The main/main branch should be protected against force pushes\\
+    \item The default branch and any release branches should be protected against force pushes\\
       (Github/Gitlab settings)
   \end{itemize}
 \end{frame}
