--- a/content/git.tex
+++ b/content/git.tex
@@ -145,6 +145,19 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]{Exercise}
+  \begin{itemize}
+    \item Configure your name and email
+    \item Check with
+      \begin{code}{bash}
+        $ git config user.name
+        # should print your name
+        $ git config user.email
+        # should print your email 
+      \end{code}
+  \end{itemize}
+\end{frame}
+
 \begin{frame}[fragile]{Creating or Cloning a Repository}
   \begin{itemize}
     \item Create a new git repository in the current directory
