--- a/content/git.tex
+++ b/content/git.tex
@@ -363,6 +363,7 @@
     \draw[thick,->] (remote.west) to[out=180,in=180] node[left] {\texttt{git fetch}} (hist.west);
   \end{tikzpicture}
   \end{center}
+  More on different hosting providers (Software Forges) later
 \end{frame}
 
 \begin{frame}[fragile]{Syncing with remotes}
