--- a/content/git.tex
+++ b/content/git.tex
@@ -512,7 +512,7 @@
         $ git commit
       \end{code}
   \end{enumerate}
-  useful: \texttt{git config --global merge.conflictstyle diff3}
+  useful: \texttt{git config --global merge.conflictstyle zdiff3}
 \end{frame}
 
 \begin{frame}[t]{Relevant XKCD}%
