--- a/content/git.tex
+++ b/content/git.tex
@@ -176,6 +176,35 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]{Exercise}
+  \begin{itemize}
+    \item Clone the repository with the school material: \url{https://github.com/s3-school/s3-2026-lectures/}
+      \begin{visibleenv}<2->
+        \begin{code}{bash}
+          $ git clone https://github.com/s3-school/s3-2026-lectures/
+        \end{code}
+      \end{visibleenv}%
+    \item Create a new directory
+      \begin{visibleenv}<2->
+        \begin{code}{bash}
+          $ mkdir git-demo
+        \end{code}{bash}
+      \end{visibleenv}%
+    \item Change into the new directory
+      \begin{visibleenv}<2->
+        \begin{code}{bash}
+          $ cd git-demo
+        \end{code}{bash}
+      \end{visibleenv}%
+    \item Create a new git repository in the new directory
+      \begin{visibleenv}<2->
+        \begin{code}{bash}
+          $ git init
+        \end{code}{bash}
+      \end{visibleenv}%
+  \end{itemize}
+\end{frame}
+
 \begin{frame}[fragile]{\texttt{git status}}
   \begin{itemize}
     \item Shows current branch and new, modified, added files
